Bug 519809: [faceted search] too long attachment names result in overlapping or truncated text and odd line breaks. r=asuth, a=tb3-blocker

--- a/mail/base/content/glodaFacetView.css
+++ b/mail/base/content/glodaFacetView.css
@@ -617,6 +617,7 @@ h2 {
   max-width: 20em;
   text-align: left;
   display: inline-block;
+  white-space: nowrap;
   -moz-padding-start: 1ex;
 }
 
